crates/swc/tests/tsc-references/interfaceExtendingClassWithPrivates_es2015.1.normal.js
class Foo {
}
var i;
var r = i.y;
var r2 = i.x; // error
